fix: align css selectors to changes

--- a/beastify/popup/choose_beast.css
+++ b/beastify/popup/choose_beast.css
@@ -8,26 +8,23 @@ html, body {
 
 button {
   border: none;
-  display: block;
+  width: 100%;
   margin: 3% auto;
   padding: 4px;
   text-align: center;
   font-size: 1.5em;
   cursor: pointer;
-}
-
-.beast:hover {
-  background-color: #CFF2F2;
-}
-
-.beast {
   background-color: #E5F2F2;
 }
 
-.reset {
+button:hover {
+  background-color: #CFF2F2;
+}
+
+button[type="reset"] {
   background-color: #FBFBC9;
 }
 
-.reset:hover {
+button[type="reset"]:hover {
   background-color: #EAEA9D;
 }
